Fix menu glitches on Safari. Transition time

--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -68,3 +68,7 @@
   font-weight: 100;
   color: black;
 }
+
+.test {
+  z-index: 0;
+}
